tests/baselines/reference/iterableArrayPattern27.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern27.ts(1,33): error TS2501: A rest element cannot contain a binding pattern.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern27.ts (1 errors) ====
    function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]: [string, number][]) { }
                                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2501: A rest element cannot contain a binding pattern.
    takeFirstTwoEntries(...new Map([["", 0], ["hello", 1]]));